exports[`Select accepts initial value 1`] = `
<div
  className="grommetux-select grommetux-select--medium"
  onClick={[Function]}>
  <input
    className="grommetux-input grommetux-select__input"
    disabled={true}
    value="one" />
  <button
    aria-label="Select Icon"
    className="grommetux-button grommetux-button--plain grommetux-select__control"
    disabled={false}
    href={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={Object {}}
    type="button">
    <span
      className="grommetux-button__icon">
      <i
        aria-hidden="true"
        className="grommetux-select-input__caret fa fa-caret-down" />
    </span>
  </button>
</div>
`;

exports[`Select has correct default options 1`] = `
<div
  className="grommetux-select grommetux-select--medium"
  onClick={[Function]}>
  <input
    className="grommetux-input grommetux-select__input"
    disabled={true}
    value="" />
  <button
    aria-label="Select Icon"
    className="grommetux-button grommetux-button--plain grommetux-select__control"
    disabled={false}
    href={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    style={Object {}}
    type="button">
    <span
      className="grommetux-button__icon">
      <i
        aria-hidden="true"
        className="grommetux-select-input__caret fa fa-caret-down" />
    </span>
  </button>
</div>
`;

exports[`Select inline + multiple 1`] = `
<div
  className="grommetux-select grommetux-select--inline grommetux-select--medium">
  <ol
    className="grommetux-select__options"
    onClick={undefined}>
    <li
      className="grommetux-select__option grommetux-select__option--selected"
      onClick={undefined}>
      <label
        aria-label="one"
        className="grommetux-check-box">
        <span>
          <input
            checked={true}
            className="grommetux-check-box__input"
            disabled={undefined}
            id="undefined-one"
            name={undefined}
            onChange={[Function]}
            tabIndex="0"
            type="checkbox" />
          <span
            className="grommetux-check-box__control">
            <svg
              className="grommetux-check-box__control-check"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24">
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none" />
            </svg>
          </span>
        </span>
        <label
          className="grommetux-check-box__label"
          htmlFor="undefined-one">
          one
        </label>
      </label>
    </li>
    <li
      className="grommetux-select__option"
      onClick={undefined}>
      <label
        aria-label="two"
        className="grommetux-check-box">
        <span>
          <input
            checked={false}
            className="grommetux-check-box__input"
            disabled={undefined}
            id="undefined-two"
            name={undefined}
            onChange={[Function]}
            tabIndex="0"
            type="checkbox" />
          <span
            className="grommetux-check-box__control">
            <svg
              className="grommetux-check-box__control-check"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24">
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none" />
            </svg>
          </span>
        </span>
        <label
          className="grommetux-check-box__label"
          htmlFor="undefined-two">
          two
        </label>
      </label>
    </li>
  </ol>
</div>
`;

exports[`Select inline 1`] = `
<div
  className="grommetux-select grommetux-select--inline grommetux-select--medium">
  <ol
    className="grommetux-select__options"
    onClick={undefined}>
    <li
      className="grommetux-select__option grommetux-select__option--selected"
      onClick={undefined}>
      <label
        className="grommetux-radio-button">
        <input
          checked={true}
          className="grommetux-radio-button__input"
          id="undefined-one"
          onChange={[Function]}
          type="radio" />
        <span
          className="grommetux-radio-button__control" />
        <label
          className="grommetux-radio-button__label"
          htmlFor="undefined-one">
          one
        </label>
      </label>
    </li>
    <li
      className="grommetux-select__option"
      onClick={undefined}>
      <label
        className="grommetux-radio-button">
        <input
          checked={false}
          className="grommetux-radio-button__input"
          id="undefined-two"
          onChange={[Function]}
          type="radio" />
        <span
          className="grommetux-radio-button__control" />
        <label
          className="grommetux-radio-button__label"
          htmlFor="undefined-two">
          two
        </label>
      </label>
    </li>
  </ol>
</div>
`;
